--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"node api/index.js",
+    "dev": "node --watch api/index.js"
   },
   "keywords": [],
   "author": "juampymdd",
